# discord-fank

./: .gitignore  Cargo.toml  Readme.md  Rocket.toml  example.Secrets.toml  schema.sql
src/: db.rs  lib.rs  main.rs  scheduler.rs  util.rs
src/api/: mod.rs
src/api/routes/: leaderboard.rs  mod.rs
src/commands/: comp.rs  eightball.rs  fun.rs  mod.rs  ping.rs  rank.rs  watchlist.rs
src/database/: account.rs  mod.rs
src/routes/: hello.rs  leaderboard.rs  mod.rs  rank.rs
src/services/: mod.rs  stocks.rs
web/: .env.example  app.vue  nuxt.config.ts  package.json  tailwind.config.js
web/components/: AppHeader.vue  Auth.vue  DashboardHeader.vue  Guild.vue  GuildIcon.vue  Rank.vue  User.vue
web/composables/: discord.js
web/layouts/: dashboard.vue  default.vue  global.css
web/pages/: index.vue  login.vue
web/pages/Rank/: index.vue
web/pages/dashboard/: index.vue
web/server/api/discord/: callback.js
web/utils/: permissions.js
