[package]
name = "discord-fank"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-service = { version = "0.5.2", features = ["secrets", "bot-serenity"] }
tokio = { version = "1.20.1", features = ["rt", "macros", "rt-multi-thread"] }
sqlx = { version = "0.6.1", features = [
    "runtime-tokio-native-tls",
    "postgres",
] }
log = "0.4.17"
itertools = "0.10.5"
