[package]
name = "discord-fank"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-service = { version = "0.6.0" }
shuttle-shared-db = { version = "0.6.0", features = [
    "postgres"
] }
shuttle-secrets = "0.6.0"
tokio = { version = "1.20.1", features = [
    "rt", 
    "macros", 
    "rt-multi-thread"
] }
sqlx = { version = "0.6.1", features = [
    "runtime-tokio-native-tls",
    "postgres"
] }
log = "0.4.17"
itertools = "0.10.5"
chrono = "0.4.22"
serde_json = "1.0.85"
axum = "0.5.16"
sync_wrapper = "0.1.1"
async-session = "3.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
axum-sqlx-tx = "0.4.0"
clokwerk = "0.4.0-rc1"
chrono-tz = "0.6.3"
anyhow = "1.0.65"