[package]
name = "discord-fankbot"
description = "a discord bot for financial trading servers"
version = "0.2.0"
edition = "2021"
publish = false
authors = ["Evan Kohout <ebox86@gmail.com>"]
readme = "Readme.md"
homepage = "https://fankbot.xyz/"
repository = "https://github.com/ebox86/discord-fank"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"

[dependencies]
reqwest = { version = "0.11.11", features = ["json"] }
serde = "1.0.144"
serenity = { version = "0.11.5", default-features = false, features = [
    "client",
    "gateway",
    "rustls_backend",
    "model",
] }
shuttle-service = { version = "0.6.0" }
shuttle-shared-db = { version = "0.6.0", features = [
    "postgres"
] }
shuttle-secrets = "0.6.0"
tokio = { version = "1.20.1", features = [
    "rt", 
    "macros", 
    "rt-multi-thread"
] }
sqlx = { version = "0.6.1", features = [
    "runtime-tokio-native-tls",
    "postgres"
] }
log = "0.4.17"
itertools = "0.10.5"
chrono = "0.4.22"
serde_json = "1.0.85"
sync_wrapper = "0.1.1"
async-session = "3.0.0"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
clokwerk = "0.4.0-rc1"
chrono-tz = "0.6.3"
anyhow = "1.0.65"
rocket = { version = "0.5.0-rc.1", features = ["json"] }

